--- a/examples/app_4/app/templates/main_layout.html
+++ b/examples/app_4/app/templates/main_layout.html
@@ -2,35 +2,47 @@
 
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    
-        <title>wizars</title>
-      </head>
-  <body>
-    <header>
-      <!-- Image and text -->
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="/static/images/cat-2.jpg" alt="" width="30" height="30" class="d-inline-block align-top">
-                wizars
-            </a>
-            <div class="btn-group">
-                <a href="/mypage" class="btn btn-primary">マイページ</a>
-            </div>
-        </div>
-    </nav>
-    </header>
-    <main>
-      {% block content %}
 
-      {% endblock %}
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+
+    <!-- JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
+
+
+    <title>wizars</title>
+</head>
+
+<body>
+    <header>
+        <!-- Image and text -->
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="teachers">
+                    <img src="/static/images/cat-2.jpg" alt="" width="30" height="30"
+                        class="d-inline-block align-top">
+                    wizars
+                </a>
+                <div class="btn-group">
+                    <a href="/mypage" class="btn btn-primary">マイページ</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main class="mx-3 my-3">
+        {% block content %}
+
+        {% endblock %}
     </main>
-  </body>
+</body>
+
 </html>
