--- a/examples/app_4/app/templates/teachers.html
+++ b/examples/app_4/app/templates/teachers.html
@@ -1,6 +1,27 @@
 {% extends "main_layout.html" %}
 {% block content%}
 
-    <h1>先生一覧</h1>
-    
+    <div class="container">
+        {% for i in range(10) %}
+        
+        <div class="card shadow-sm p-3 my-3" >
+            <div class="row">
+                <div class="col-2">
+                    <img src="/static/images/cat-2.jpg" class="img-circle mx-auto d-block" width="50" height="50" alt="...">
+                </div>
+                <div class="col-10">
+                    <div class="card-title">
+                        <h5>佐藤太郎</h5>
+                    </div>
+                    <div class="card-text">
+                        1,000￥/h ~
+                        <br>10:00~19:00
+                    </div>
+                </div>
+            </div>
+            <a href="/teachers/1" class="stretched-link"></a>
+        </div>
+        {% endfor %}
+    </div>
+
 {% endblock %}
