--- a/examples/app_4/app/templates/main_layout.html
+++ b/examples/app_4/app/templates/main_layout.html
@@ -27,7 +27,7 @@
         <!-- Image and text -->
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="teachers">
+                <a class="navbar-brand" href="/teachers">
                     <img src="/static/images/cat-2.jpg" alt="" width="30" height="30"
                         class="d-inline-block align-top">
                     wizars
