--- a/examples/app_4/app/templates/teacher.html
+++ b/examples/app_4/app/templates/teacher.html
@@ -2,7 +2,9 @@
 {% block content%}
 
     <div class="container">
-        <p>詳細ページ</p>
+        <p>{{user.name}}</p>
+        <p>{{user.price}}</p>
+        <p>{{user.time}}</p>
     </div>
 
 {% endblock %}
