--- a/examples/app_4/app/templates/main_layout.html
+++ b/examples/app_4/app/templates/main_layout.html
@@ -18,6 +18,10 @@
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
 
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+
+    <link rel="stylesheet" href="/static/style.css" type="text/css">
 
     <title>wizars</title>
 </head>
@@ -28,12 +32,11 @@
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/teachers">
-                    <img src="/static/images/cat-2.jpg" alt="" width="30" height="30"
-                        class="d-inline-block align-top">
+                    <img src="/static/images/cat-2.jpg" alt="" width="30" height="30" class="d-inline-block align-top">
                     wizars
                 </a>
                 <div class="btn-group">
-                    <a href="/mypage" class="btn btn-primary">マイページ</a>
+                    <a href="/mypage/1" class="btn btn-primary">マイページ</a>
                 </div>
             </div>
         </nav>
