--- a/examples/app_4/app/templates/teacher.html
+++ b/examples/app_4/app/templates/teacher.html
@@ -5,6 +5,7 @@
         <p>{{user.name}}</p>
         <p>{{user.price}}</p>
         <p>{{user.time}}</p>
+        <a href="/mypage/{{user.id}}" class="btn btn-primary">リクエスト</a>
     </div>
 
 {% endblock %}
