--- a/examples/app_4/app/templates/teachers.html
+++ b/examples/app_4/app/templates/teachers.html
@@ -14,7 +14,7 @@
                         <h5>{{user.name}}</h5>
                     </div>
                     <div class="card-text">
-                        {{user.price}}
+                        {{user.price}}円/h
                         <br>{{user.time}}
                     </div>
                 </div>
