--- a/wizars/app/templates/teacher.html
+++ b/wizars/app/templates/teacher.html
@@ -29,7 +29,7 @@
             <form action="/mypage" method="POST">
                 <input type="hidden" class="form-control" name="teacher_id" value="{{teacher.id}}">
                 <div class="d-grid gap-2 mt-5 mb-2">
-                    <button type="submit" class="btn btn-primary">お願いする</button>
+                    <button type="submit" class="btn btn-primary">授業をお願いする</button>
                 </div>
             </form>
 
