--- a/wizars/app/templates/register.html
+++ b/wizars/app/templates/register.html
@@ -6,7 +6,7 @@
         <div class="card-header text-center">
             <h5 class="card-title">先生登録画面</h5>
         </div>
-        <form action="/teachers" method="post" enctype="multipart/form-data">
+        <form action="/request" method="post" enctype="multipart/form-data">
             <div class="card-body">
                 <div class="mb-3">
                     <label for="name" class="form-label">お名前</label>
@@ -29,11 +29,11 @@
                     <textarea class="form-control" id="text" rows=5 name="text"></textarea>
                 </div>
             </div>
-            <div class="card-footer text-center">
-                <div class="d-grid gap-2">
+            <!-- <div class="card-footer text-center"> -->
+                <div class="d-grid gap-2 mx-3 mb-4 mt-1">
                     <button type="submit" class="btn btn-primary">登録</button>
                 </div>
-            </div>
+            <!-- </div> -->
         </form>
     </div>
 </div>
