とりあえず完成で

--- a/wizars/app/templates/main_layout.html
+++ b/wizars/app/templates/main_layout.html
@@ -8,6 +8,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>wizars | さぁ，先生と魔法使いになろう</title>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -19,32 +21,41 @@
         crossorigin="anonymous"></script>
 
     <!-- fontawesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Amita&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="/static/style.css" type="text/css">
 
-    <title>wizars</title>
+
 </head>
 
-<body>
+<body class="bg-light">
     <header>
         <!-- Image and text -->
-        <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/teachers">
-                    <img src="/static/images/cat-2.jpg" alt="" width="30" height="30" class="d-inline-block align-top">
+        <nav class="navbar navbar-light bg-light shadow-sm">
+            <div class="container-fluid mx-2">
+                <a class="navbar-brand" href="/teachers" style="font-family: Amita;">
+                    <!-- <img src="/static/images/cat-2.jpg" alt="" width="30" height="30" class="d-inline-block align-top"> -->
                     wizars
                 </a>
+
                 <div class="btn-group">
-                    <a href="/mypage" class="btn btn-primary">マイページ</a>
+                    <a href="/mypage">
+                        <i class="bi bi-person-circle" style="font-size: 30px; color: darkslategrey;"></i>
+                    </a>
                 </div>
             </div>
         </nav>
     </header>
     <main class="mx-3 my-3">
-        {% block content %}
-
-        {% endblock %}
+        {% block content %} {% endblock %}
     </main>
 </body>
 
