--- a/wizars/app/templates/mypage.html
+++ b/wizars/app/templates/mypage.html
@@ -1,37 +1,43 @@
-{% extends "main_layout.html" %}
-{% block content%}
+{% extends "main_layout.html" %} {% block content%}
 
 
 <div class="container">
+    <h5 class="mt-3">勉強の記録</h5>
+    <p class="my-5">ここにグラフアニメーション</p>
     <h5 class="mt-3">これからの授業</h5>
-    {% for teacher in teachers %}
+    {% for teacher in teachers if teachers != None %}
     <div class="card shadow-sm mt-3">
         <div class="card-body">
             <h5 class="card-title">{{teacher.time}}</h5>
-            <p class="card-text">{{teacher.subject}}（{{teacher.name}}先生）</p>
+            <p class="card-text">{{teacher.subject}}（<a href="/teachers/{{teacher.id}}" class="text-dark"
+                    style="text-decoration: none;">{{teacher.name}} 先生</a>）</p>
             <a href="#" class="btn btn-primary">ビデオチャットを始める</a>
         </div>
     </div>
     {% endfor %}
 
     <h5 class="mt-5">終わった授業</h5>
-    <div class="card shadow-sm mt-3">
+
+    {% if teachers != None %}
+    <div class="card shadow-sm mt-3 mb-5">
         <div class="card-body">
             <h5 class="card-title">2月15日 14:00~17:00</h5>
-            <p class="card-text">英語（{{teachers[0].name}}先生）</p>
+            <p class="card-text">英語（<a href="/teachers/{{teachers[0].id}}" class="text-dark"
+                    style="text-decoration: none;">{{teachers[0].name}} 先生</a>）</p>
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#report">
+            <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#report">
                 レポート
-            </button>
+            </button> -->
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#review">
-                感想を送る
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#reviewModal">
+                レビュー
             </button>
         </div>
     </div>
+    {% endif %}
 
     <!-- Modal -->
-    <div class="modal fade" id="report" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="report" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
@@ -46,23 +52,33 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <!-- Modal -->
-    <div class="modal fade" id="review" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="reviewModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header text-center">
-                    <h5 class="modal-title" id="exampleModalLabel">感想を送る</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">レビュー</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form action="/" method="POST">
+                <form action="/review" method="POST">
                     <div class="modal-body">
+                        <div class="stars mb-3">
+                            <span class="" style="margin: 0 auto; width: 200px;">
+                                <input id="review01" type="radio" name="rating" value=5><label for="review01">★</label>
+                                <input id="review02" type="radio" name="rating" value=4><label for="review02">★</label>
+                                <input id="review03" type="radio" name="rating" value=3><label for="review03">★</label>
+                                <input id="review04" type="radio" name="rating" value=2><label for="review04">★</label>
+                                <input id="review05" type="radio" name="rating" value=1><label for="review05">★</label>
+                            </span>
+                        </div>
                         <div class="mb-3">
-                            <textarea class="form-control" id="review" rows="5"></textarea>
+                            <textarea class="form-control" id="text" rows="5" name="text"></textarea>
                         </div>
                     </div>
+                    <input type="hidden" class="form-control" name="teacher_id" value="{{teachers[0].id}}">
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-primary">送信</button>
                     </div>
