--- a/wizars/app/templates/register.html
+++ b/wizars/app/templates/register.html
@@ -6,7 +6,7 @@
         <div class="card-header text-center">
             <h5 class="card-title">先生登録画面</h5>
         </div>
-        <form action="/request" method="post" enctype="multipart/form-data">
+        <form action="/register" method="post" enctype="multipart/form-data">
             <div class="card-body">
                 <div class="mb-3">
                     <label for="name" class="form-label">お名前</label>
