--- a/wizars/app/templates/teacher.html
+++ b/wizars/app/templates/teacher.html
@@ -26,17 +26,38 @@
                 </table>
             </div>
 
-            <form action="/mypage" method="POST">
+            <form action="/request" method="POST">
                 <input type="hidden" class="form-control" name="teacher_id" value="{{teacher.id}}">
                 <div class="d-grid gap-2 mt-5 mb-2">
                     <button type="submit" class="btn btn-primary">授業をお願いする</button>
                 </div>
             </form>
 
+        </div>
     </div>
-</div>
 
-<h5 class="mt-5">レビュー</h5>
+    <h5 class="mt-5">レビュー</h5>
+    {% for review in reviews %}
+    <div class="card shadow-sm p-3 my-3">
+        <div class="card-title">
+            <div class="stars-review">
+                <span>
+                    {% for _ in range(review.rating) %}
+                    <label style="color: #F8C601; margin-right: -5px;">★</label>
+                    {% endfor %}
+                    {% for _ in range(5-review.rating) %}
+                    <label style="color: #D2D2D2; margin-right: -5px;;">★</label>
+                    {% endfor %}
+                </span>
+            </div>
+        </div>
+        <div class="card-text">
+            {{review.text}}
+        </div>
+    </div>
+    {% endfor %}
+
+
 
 </div>
 
