--- a/wizars/app/templates/teachers.html
+++ b/wizars/app/templates/teachers.html
@@ -2,12 +2,12 @@
 {% block content%}
 
 <div class="container mb-5">
-    {% for teacher in teachers %}
+    {% for teacher in teachers if teachers != [] %}
 
-    <div class="card shadow-sm p-3 my-3">
+    <div class="card shadow-sm px-2 py-3 my-3">
         <div class="row">
-            <div class="col-2">
-                <img src="/static/images/{{teacher.image}}.png" class="rounded-circle" width="50" height="50" alt="...">
+            <div class="col-2 text-center">
+                <img src="/static/images/{{teacher.image}}.png" class="rounded-circle mt-2" width="50" height="50" alt="...">
             </div>
             <div class="col-10">
                 <div class="card-title">
@@ -23,7 +23,6 @@
     </div>
 
     {% endfor %}
-
 
 
 </div>
