--- a/wizars/app/templates/main_layout.html
+++ b/wizars/app/templates/main_layout.html
@@ -45,6 +45,9 @@
                     <!-- <img src="/static/images/cat-2.jpg" alt="" width="30" height="30" class="d-inline-block align-top"> -->
                     wizars
                 </a>
+                <form class="d-flex">
+                    <input class="form-control" type="search" placeholder="科目, 時間から検索する" aria-label="Search">
+                  </form>
 
                 <div class="btn-group">
                     <a href="/mypage">
