--- a/wizars/app/templates/main_layout.html
+++ b/wizars/app/templates/main_layout.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>wizars | さぁ，先生と魔法使いになろう</title>
+    <title>wizars | みんなの見守り勉強プラットフォーム</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
