--- a/wizars/app/templates/mypage.html
+++ b/wizars/app/templates/mypage.html
@@ -3,18 +3,23 @@
 
 <div class="container">
     <h5 class="mt-3">勉強の記録</h5>
-    <p class="my-5">ここにグラフアニメーション</p>
-    <h5 class="mt-3">これからの授業</h5>
-    {% for teacher in teachers  %}
+    <div class="card shadow-sm mt-3">
+        <div class="card-body">
+            <img src="/static/images/graph-1.png" class="img-fluid" alt="">
+            <img src="/static/images/graph-2.png" class="img-fluid mb-3" alt="">
+        </div>
+    </div>
+    <h5 class="mt-5">これからの授業</h5>
+    {% for teacher in teachers %}
     <div class="card shadow-sm mt-3">
         <div class="card-body">
             <h5 class="card-title">{{teacher.time}}</h5>
             <p class="card-text">{{teacher.subject}}（<a href="/teachers/{{teacher.id}}" class="text-dark"
                     style="text-decoration: none;">{{teacher.name}} 先生</a>）</p>
             <div class="card-text">
-                <a href="#" class="btn btn-primary" role="button">ビデオチャットを始める</a>
+                <a href="/video" class="btn btn-primary" role="button">ビデオチャットを始める</a>
             </div>
-                
+
         </div>
     </div>
     {% endfor %}
@@ -101,7 +106,7 @@
     </div>
 
 
-    
+
 </div>
 
 {% endblock %}
